<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/default_spacing">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/floating_action_button_reset">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius">
                <TextView
                    android:id="@+id/text_liquid_quantity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_liquid_quantity_label"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/text_liquid_quantity_value"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/text_liquid_quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_home_values"
                    tools:text="@string/text_quantity_value_liquid_default"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_spacing"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius">
                <TextView
                    android:id="@+id/text_sodium_quantity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sodium_quantity_label"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@id/text_liquid_quantity_value"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <TextView
                    android:id="@+id/text_sodium_quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    tools:text="@string/text_quantity_value_food_default"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_spacing"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius">
                <TextView
                    android:id="@+id/text_potassium_quantity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_potassium_quantity_label"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/text_potassium_quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    tools:text="@string/text_quantity_value_food_default"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_spacing" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/default_spacing"
                app:cardCornerRadius="@dimen/card_corner_radius">
                <TextView
                    android:id="@+id/text_phosphorus_quantity_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phosphorus_quantity_label"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/text_phosphorus_quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50sp"
                    tools:text="@string/text_quantity_value_food_default"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/default_spacing"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:contentDescription="@string/floating_action_button_reset"
        android:src="@drawable/baseline_restart_alt_24"
        android:backgroundTint="@color/maroon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:borderWidth="0dp"
        app:tint="@color/white"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_water_drop_24"
        android:contentDescription="@string/floating_action_button_water_description"
        android:layout_margin="@dimen/default_spacing"
        android:backgroundTint="@color/teal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:borderWidth="0dp"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>